# data-source-manager

./: .cursorignore  .cursorrules  .gitignore  .lychee.toml  .markdownlint.jsonc  .mise.local.toml.example  .mise.toml  .pylintrc  .releaserc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_BUG_FIX_REPORT.md  DSM_AUTO_REINDEX_FIX_SUMMARY.md  DSM_ENHANCEMENT_SUMMARY.md  DSM_LOGGING_IMPROVEMENTS_SUMMARY.md  DSM_LOGGING_SOLUTION_SUMMARY.md  EMERGENCY_RESTORE.md  LICENSE  LOGURU_MIGRATION_TEST_RESULTS.md  README.md  SOLUTION_SUMMARY.md  __init__.py  clear_cache.py  debug_timeout.py  dsm_fix_demonstration.py  mise.toml  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  test_dsm_auto_reindex_fix.py  test_fcp_cache.py  test_unused_imports.py  test_unused_imports2.py
.claude/: README.md  settings.json  settings.md
.claude/agents/: api-reviewer.md  data-fetcher.md  fcp-debugger.md  silent-failure-hunter.md  test-writer.md
.claude/commands/: debug-fcp.md  feature-dev.md  fetch-data.md  quick-test.md  review-ckvd.md  review-dsm.md  validate-data.md
.claude/hooks/: README.md  ckvd-bash-guard.sh  ckvd-code-guard.sh  ckvd-final-check.sh  ckvd-session-start.sh  ckvd-skill-suggest.sh  dsm-bash-guard.sh  dsm-code-guard.sh  hooks.json
.claude/rules/: binance-api.md  caching-patterns.md  dataframe-operations.md  error-handling.md  fcp-protocol.md  symbol-formats.md  timestamp-handling.md
.cursor/rules/: agent-github-flavoured-markdown.mdc  agent-help-content-utils.mdc  agent-readme.mdc  agent-trim-to-utils.mdc  agent_debug_chunk.mdc  agent_trim_to_utils.mdc  always-focus-demo.mdc  always-sot.mdc  always_focus_demo.mdc  async_http_task_handling.mdc  date-time-pendulum.mdc  focus-ckvd-fcp-demo.mdc  focus_demo.mdc  helper-isolation.mdc  helper-solation.mdc  manual-project-rules.mdc  manual-pytest-construction.mdc  manual_pytest-construction.mdc  path-finding.mdc  project-maintenance.mdc  pytest-construction.mdc  python.mdc  readme.mdc  rename_project_plan.mdc  ruff-check-autofix.mdc  ruff-magic-value.mdc  run-tests.mdc  sot.mdc  test-construction.mdc
.devcontainer/: Dockerfile  devcontainer.json  make-scripts-executable.sh  setup-git-ssh.sh  switch-github-key.sh  verify-path.sh
core/: __init__.py  binance_funding_rate_client.py  cache_manager.py  data_client_factory.py  data_client_interface.py  data_source_manager.md  data_source_manager.py  market_data_client.py  rest_data_client.py  vision_constraints.py  vision_data_client.py  vision_data_client_enhanced.py
core/providers/: __init__.py
core/sync/: __init__.py  binance_funding_rate_client.py  cache_manager.py  data_client_factory.py  data_client_interface.py  data_source_manager.py  dsm_lib.py  rest_data_client.py  vision_constraints.py  vision_data_client.py
docs/: CLAUDE.md  GLOSSARY.md  INDEX.md  RESUME.md  TROUBLESHOOTING.md  binance_api_testing_results.md  binance_best_practices.md  binance_rest_api_boundary_behaviour.md  caching_migration_guide.md  core_workflow_in_mermaid.md  documentation_audit.md  http_client_benchmark_summary.md  httpx_migration_guide.md  python_package_principles.mdc  python_package_principles_checklist.md  python_package_principles_examples.py  python_package_principles_guide.md  roadmap_revamp_time_alignment.md  roadmap_upgrade_market_data_client.md  roadmap_upgrade_market_data_client_lhf.md  roadmap_upgrade_vision_data_client.md  why_dsm_is_main_but_not_ucm.md
docs/adr/: 2025-01-30-failover-control-protocol.md  2025-01-30-src-layout-package-structure.md  2026-01-30-claude-code-infrastructure.md
docs/api/: README.md  binance_best_practices.md  (+7 more)
examples/: CLAUDE.md  README.md  _telemetry.py  checksum_verification_test.py  ckvd_cache_control_example.py  ckvd_lazy_initialization_demo.py  ckvd_logging_demo.py  clean_feature_engineering_example.py  data_retrieval_best_practices.py  dsm_lazy_initialization_demo.py  funding_rate_example.py  multi_data_example.py  quick_start.py  recommended_data_retrieval.py  simple_data_retrieval.py  task_cancellation_demo.py  task_cancellation_test.py  test_checksum.py  timestamp_semantics_demo.py  verify_data_retrieval.py
output/: BTCUSDT_1m_timestamp_comparison.html
playground/: benchmark_best_practice.py
roadmap/: smart_data_retrieval_refactoring.md
scripts/: CLAUDE.md  mark_deprecated_tests.sh  publish-to-pypi.sh  remove_deprecated_tests.sh  run_consolidated_tests.sh  run_tests.sh  run_tests_parallel.sh
src/: CLAUDE.md
tests/: CLAUDE.md  CONSOLIDATION_PLAN.md  README.md  __init__.py  conftest.py  test_cache_deprecation_migration_path.py  test_cache_dsm_lifecycle_operations.py  test_cache_performance_benchmarking.py  test_cache_unified_system_foundations.py  test_cache_vision_client_integration.py  test_cache_vision_data_integrity.py  test_dsm_comprehensive_integration.py  test_dsm_time_boundary_comprehensive.py  test_dsm_time_boundary_edge_cases.py  test_dsm_timestamp_precision_handling.py  test_dsm_year_boundary_crossover.py  test_http_client_factory.py  test_market_api_direct_integration.py  test_market_data_enhanced_retriever.py  test_market_data_structure_validation.py  test_time_alignment_utils.py  test_vision_api_core_functionality.py
utils/: __init__.py  api_boundary_validator.py  app_paths.py  arrow_cache_reader.py  async_cleanup.py  cache_validator.py  checksum_verify.py  config.py  dataframe_types.py  dataframe_utils.py  deprecation_rules.py  download_handler.py  error_handling.py  fcp_cache_utils.py  fcp_cli_demo.py  fcp_cli_examples.py  fcp_data_utils.py  fcp_display_utils.py  fcp_progress_utils.py  fcp_project_utils.py  fcp_table_utils.py  fcp_time_utils.py  gap_detector.py  hardware_monitor.py  http_client_factory.py  logger_setup.py  market_constraints.py  market_utils.py  network_utils.py  schema_standardizer.py  task_manager.py  time_alignment.py  time_utils.py  timeout.py  validation.py  validation_utils.py  vision_checksum.py  vision_constraints.py  vision_file_utils.py  vision_timestamp.py
utils_for_debug/: __init__.py  data_integrity.py  dataframe_output.py
(+599 files in other folders)
