[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-source-manager"
version = "0.1.32"
description = "Binance OHLCV data from Vision API (on AWS S3) and their REST API"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary" # Custom SPDX identifier for proprietary license (PEP 639 compliant)
license-files = ["LICENSE"]  # Path to license file (required for custom licenses)
authors = [
    {name = "EonLabs", email = "chen@eonlabs.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "attrs>=25.3.0,<25.4.0", # allow patch version changes
    "pyarrow>=20.0.0,<21.0.0", # for local cache files in MMAP Array format
    "polars>=1.30.0,<1.31.0", # resample and aggregate data faster than pandas
    "pandas>=2.2.3,<2.3.0", # allow patch version changes; compatibility with existing code
    "numpy==1.24.4", # most sensitive to version changes so locked on 1.24.4 unless there is a good reason to upgrade
    "fsspec>=2025.5.1",          # for downloading remote files and local file hyrarchy matching of remote files
    "requests>=2.32.3,<2.33.0",        # fsspec compatible HTTP client
    "httpx>=0.28.1,<0.29.0",   # as preferred HTTP client
    "aiohttp>=3.12.6,<3.13.0", # for HTTP requests
    "tenacity>=9.1.2,<9.3.0", # for retrying operations
    "colorlog>=6.9.0,<6.10.0", # for colored logging
    "psutil>=7.0.0,<7.1.0", # for system monitoring
    "typer>=0.16.0,<0.17.0", # for CLI
    "rich>=14.0.0,<15.0.0", # for elegant logging and CLI output
    "pendulum>=3.1.0,<3.2.0", # for date and time operations
    "platformdirs>=4.3.8,<4.4.0", # for platform-specific directory paths
    "loguru>=0.7.3,<0.8.0", # for logging
]

[project.optional-dependencies]
dev = [ # allow upgrade within major version; for Binance Vision & REST API data sources
    "custom-logger>=0.1.1,<0.2.0", # allow upgrade within major version; for adding custom logging and log file management
    "twine>=6.1.0,<7.0.0", # allow upgrade within major version; for uploading the package to PyPI
    "pytest>=8.3.5,<9.0.0", # allow upgrade within major version; for testing
    "pytest-xdist>=3.7.0,<4.0.0", # allow upgrade within major version; for testing code coverage
    "pytest-profiling",
    "pyupgrade>=3.20.0,<4.0.0", # allow upgrade within major version; for upgrading Python code to match the `requires-python` version
    "ruff>=0.11.12,<0.12.0", # allow upgrade within major version; for linting and formatting - replaces pylint and autoflake
]
# Command-line scripts defined here
[project.scripts]
dsm-demo-cli = "examples.sync.dsm_demo_cli:app"
dsm-demo-module = "examples.lib_module.dsm_demo_module:main"
recmove = "scripts.dev.refactor_move:app"

# Using find_packages to ensure all subdirectories are properly included
[tool.setuptools.packages.find]
where = ["."] # Look for packages in the root directory
include = [
    "core*",
    "utils*",
    "examples*",
    "utils_for_debug*",
    "scripts*",
] # Include all subdirectories with their subpackages

# Add package data to ensure all Python files are included
[tool.setuptools.package-data]
"examples" = ["**/*.py"]
"utils" = ["**/*.py"]
"core" = ["**/*.py"]
"utils_for_debug" = ["**/*.py"]
"scripts" = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# Align with project.requires-python (>=3.10)
# Ruff comment - this cannot be inherited automatically
target-version = "py310"
# Allow autofix for all enabled rules
lint.fixable = ["ALL"]
# Allow unused variables when underscored
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Respect .gitignore
respect-gitignore = true
# Exclude directories from Ruff checks
lint.exclude = ["playground/", "tests/", ".git/", "__pycache__/"]

[tool.basedpyright]
exclude = ["**/__pycache__", "**/.cache", ".venv"]
ignore = ["**/tests/**/*.py", "tests/**/*.py", "ml_feature_set/tests/**/*.py"]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "basic"
