[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-kline-vision-data"
version = "3.1.1"
description = "Professional market data integration with clean package architecture"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "EonLabs", email = "terry@eonlabs.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "attrs>=25.0.0", # data classes and validation - latest versions
    "pyarrow>=19.0.0,<21.0.0", # for local cache files in MMAP Array format
    "polars>=1.30.0,<2.0.0", # resample and aggregate data faster than pandas
    "pandas>=2.2.0,<3.0.0", # compatibility with existing code
    "numpy>=1.26.0,<3.0.0", # compatible with Python 3.12+ and pandas requirements
    "fsspec>=2024.6.0", # for downloading remote files and local file hierarchy matching
    "requests>=2.32.0", # fsspec compatible HTTP client
    "httpx>=0.28.0", # preferred HTTP client
    "tenacity>=9.0.0", # for retrying operations
    "colorlog>=6.8.0", # for colored logging
    "typer>=0.16.0", # for CLI
    "rich>=13.0.0", # for elegant logging and CLI output
    "pendulum>=3.0.0", # for date and time operations
    "platformdirs>=4.0.0", # for platform-specific directory paths
    "loguru>=0.7.0", # for logging
]

[project.optional-dependencies]
dev = [ # development dependencies using latest versions
    "build>=1.2.0", # build tool for creating distributions
    "twine>=6.0.0", # for uploading the package to PyPI
    "pytest>=8.0.0", # for testing
    "pytest-xdist>=3.6.0", # for parallel testing
    "pytest-cov>=6.0.0", # for coverage reporting
    "pytest-profiling",
    "pyupgrade>=3.20.0", # for upgrading Python code syntax
    "ruff>=0.11.0", # for linting and formatting
    "GitPython>=3.1.0", # for recmove CLI (git operations)
    "import-linter>=2.0.0", # architectural contract enforcement
]
# Command-line scripts defined here
[project.scripts]
recmove = "scripts.dev.refactor_move:app"

# Using src-layout with proper package structure
[tool.setuptools.packages.find]
where = ["src"]
include = ["ckvd*"]

# Set package directory mapping for src-layout
[tool.setuptools.package-dir]
"" = "src"

# Add package data to ensure all Python files are included
[tool.setuptools.package-data]
"ckvd" = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# Align with project.requires-python (>=3.13)
# Ruff comment - this cannot be inherited automatically
target-version = "py313"
# Allow autofix for all enabled rules
lint.fixable = ["ALL"]
# Allow unused variables when underscored
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Respect .gitignore
respect-gitignore = true
# Exclude directories from Ruff checks
lint.exclude = ["playground/", "tests/", ".git/", "__pycache__/"]

[tool.basedpyright]
exclude = ["**/__pycache__", "**/.cache", ".venv"]
ignore = ["**/tests/**/*.py", "tests/**/*.py", "ml_feature_set/tests/**/*.py"]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.coverage.run]
branch = true
source = ["src/ckvd"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

# =============================================================================
# Import Architecture Contracts
# Enforces layering: core → utils (not reverse), provider isolation
# Pre-existing violations documented in ignore_imports (GitHub #16 context)
# =============================================================================

[tool.importlinter]
root_packages = ["ckvd"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Layered architecture: core → utils (not reverse)"
type = "layers"
layers = [
    "ckvd.core",
    "ckvd.utils",
]
ignore_imports = [
    "ckvd.utils.for_core.vision_file_utils -> ckvd.core.providers.binance.rest_data_client",
    "ckvd.utils.for_core.ckvd_cache_utils -> ckvd.core.providers.binance.vision_path_mapper",
]

[[tool.importlinter.contracts]]
name = "Provider isolation: Binance and OKX are independent"
type = "independence"
modules = [
    "ckvd.core.providers.binance",
    "ckvd.core.providers.okx",
]
# DataClientInterface is a shared ABC that should live in core/providers/
# but currently resides in binance/. Moving it is a separate refactoring task.
ignore_imports = [
    "ckvd.core.providers.okx.okx_rest_client -> ckvd.core.providers.binance.data_client_interface",
]

[[tool.importlinter.contracts]]
name = "No deleted layers: for_demo must stay deleted"
type = "forbidden"
source_modules = [
    "ckvd",
]
forbidden_modules = [
    "ckvd.utils.for_demo",
    "ckvd.utils_for_debug",
]